@startuml
'https://plantuml.com/class-diagram

class App
class ListController
class list
class item


javafx.Assignment4 <|-- App

App -- ListController
App -- list
App -- item

list -- item

class App {
main(String [] args) : void
start(Stage primaryStage) : void
}


class list {
getTodo() : ArrayList<item> list
getItem(String number, ArrayList<item> list) : item
displayAll(ArrayList<item> list) : String
displayIncomplete(ArrayList<item> list) : String
displayComplete(ArrayList<item> list) : String
saveList(ArrayList<item>, String name) : void
addItem(ArrayList<item> list) : void
removeItem(ArrayList<item>, String name) : void
loadList(String file) : void
clearList(ArrayList<item> list) : void
validateDate(String date) : boolean
}

class item {
- description : String
- dueDate : String
- status : String

editDescription(String newDescription) : void
editDate(String newDate) : void
completion() : void
}

class ListController {
- textArea: TextArea

editDescriptionClick() : void
editDateClick() : void
addItemClick() : void
printCompClick() : void
saveListClick() : void
removeItemClick() : void
printIncompClick() : void
completeItemClick() : void
printAllClick() : void
}
@enduml